--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,4 +9,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
